crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint@remove_constraint_remove_constraint_check_named_sqlite.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: "result.iter().map(|q| q.build(backend)).collect::<Vec<String>>().join(\"\\n\")"
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "age" integer )
INSERT INTO "users_temp" ("id", "age") SELECT "id", "age" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
