crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint@remove_constraint_remove_constraint_foreign_key_named_mysql.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: "result.iter().map(|q| q.build(backend)).collect::<Vec<String>>().join(\"\\n\")"
---
ALTER TABLE `users` DROP FOREIGN KEY `fk_user`
