crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__remove_constraint__tests__remove_constraint@remove_constraint_remove_constraint_foreign_key_named_sqlite.snap
---
source: crates/vespertide-query/src/sql/remove_constraint.rs
expression: "result.iter().map(|q| q.build(backend)).collect::<Vec<String>>().join(\"\\n\")"
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "user_id" integer )
INSERT INTO "users_temp" ("id", "user_id") SELECT "id", "user_id" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
